# Suto

./: CMakeLists.txt  main.cpp
Suto/Client/: CMakeLists.txt
Suto/Client/src/: Client.cpp
Suto/Common/: CMakeLists.txt  Suto.h
Suto/Common/include/: Common.h  Message.h  client.h  connection.h  server.h  tsqueue.h
Suto/Server/: CMakeLists.txt  Server.h
Suto/Server/src/: ServerUDP.cpp  ServerUDP.h  main.cpp
